Add ResponseMessage , emailVerification

--- a/src/main/resources/i18n/exception_ko.yml
+++ b/src/main/resources/i18n/exception_ko.yml
@@ -16,7 +16,7 @@ accessDenied:
   msg: "보유한 권한으로 접근할수 없는 리소스 입니다."
 loginFail:
   code: "-1004"
-  msg: "로그인에 실패하였습니다."
+  msg: "계정이 존재하지 않거나 이메일 또는 비밀번호가 정확하지 않습니다."
 alreadyUserExist:
   code: "-1005"
   msg: "동일한 아이디가 존재합니다."
@@ -26,15 +26,7 @@ notOwner:
 resourceNotFound:
   code: "-1007"
   msg: "해당 자원이 존재하지 않습니다."
-orderNotFound:
-  code: "-1008"
-  msg: "해당 주문이 존재하지 않습니다"
-notEnoughStock:
-  code: "-1009"
-  msg: "재고가 존재하지 않습니다."
-shoesAlreadyExist:
-  code: "-1010"
-  msg: "이미 동일한 이름의 신발이 존재합니다."
+
 communicationError:
   code: "-1011"
   msg: "통신 중 오류가 발생하였습니다."
